# pixsim7

./: .env.example  .gitattributes  .gitignore  ACTION_BLOCKS_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AI_README.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFICATION_PLAN.md  BACKEND_CLEANUP_REPORT.md  CASCADE_DELETE_FIX.md  CODEBASE_EXPLORATION_SUMMARY.md  CONSOLIDATION_SESSION_SUMMARY.md  CROSS_PROVIDER_ASSETS.md  Caddyfile  DEVELOPMENT_GUIDE.md  DOCUMENTATION_CHANGELOG.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_REDUNDANCY_ANALYSIS.md  DOCUMENTATION_STREAMLINING_PLAN.md  DYNAMIC_NODE_TYPES.md  FRONTEND_SETUP.md  GAMEPLAY_SYSTEMS.md  GRAPH_RENDERER_PLUGINS.md  Gcodepixsim7teststest_event_bus.py  LOGGING_STRUCTURE.md  MediaCard_footer2_debug.txt  MediaCard_footer_debug.txt  MediaCard_tail_debug.txt  PLUGIN_METADATA_IMPLEMENTATION.md  PLUGIN_SYSTEM.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY_ASSET_SYSTEM.md  TASK_16_COMPLETION_SUMMARY.md  TASK_19_COMPLETION_SUMMARY.md  TASK_43_COMPLETION_SUMMARY.md  UI_CONSOLIDATION_COMPLETED.md  UI_CONSOLIDATION_SUMMARY.md  UI_CRITICAL_FILES.txt  UI_FILE_TREE_REFERENCE.txt  (+51 more)
.claude/: settings.json  settings.local.json  settings.local.template.json
.github/: pull_request_template.md
.husky/: pre-commit
admin/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  (+1 more)
libs/pixverse-py/: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
libs/pixverse-py/docs/: PIXVERSE_API_REFERENCE.md  README.md  SETUP_GUIDE.md
libs/pixverse-py/docs/archive/: API_INTEGRATION_COMPLETE.md  AUTH_FEATURES.md  DEFAULTS_UPDATE.md  DURATION_AND_TRANSITIONS.md  DURATION_UPDATE_SUMMARY.md  FEATURES_ADDED.md  IMPLEMENTATION_STATUS.md  PIXSIM7_INTEGRATION_PLAN.md  QUICK_START_TESTING.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-10-22.md
libs/pixverse-py/examples/: account_info.py  account_pool.py  all_operations.py  google_oauth.py  session_refresh.py  session_usage.py  simple.py  upload_media.py
libs/pixverse-py/pixverse/: __init__.py  accounts.py  client.py  exceptions.py  models.py  pricing.py  utils.py  video_utils.py
libs/pixverse-py/pixverse/api/: __init__.py  client.py  credits.py  fusion.py  image.py  upload.py  video.py
libs/pixverse-py/pixverse/auth/: __init__.py  base.py  email_password.py  google_id_token.py  google_oauth.py  session_refresh.py
libs/pixverse-py/tests/: __init__.py  test_accounts.py  test_api_client.py  test_client.py  test_credits_operations.py  test_exceptions.py  test_image_operations.py  test_pricing.py  test_utils.py  test_video_utils.py
pixverse-py/: README.md  pyproject.toml  setup.py
pixverse-py/pixverse/: __init__.py  models.py
(+8101 files in other folders)
