[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixverse"
version = "1.0.0"
description = "Python SDK for Pixverse AI video and image generation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sakenfor"}
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Sakenfor/pixverse-py"
