[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixverse-py"
version = "1.0.0"
description = "Official Python SDK for Pixverse AI video generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PixSim Team", email = "noreply@pixsim.dev"}
]
keywords = [
    "pixverse",
    "ai",
    "video-generation",
    "text-to-video",
    "image-to-video",
    "video-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
async = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
]
playwright = [
    "playwright>=1.40.0",
]
full = [
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/Sakenfor/pixverse-py"
Documentation = "https://pixverse-py.readthedocs.io"
Repository = "https://github.com/Sakenfor/pixverse-py"
Issues = "https://github.com/Sakenfor/pixverse-py/issues"

[tool.setuptools]
packages = ["pixverse", "pixverse.auth", "pixverse.api"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pixverse --cov-report=term-missing"
